--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "git+https://github.com/booster-ts/booster-cli.git"
   },
+  "bin": {
+    "boost": "./dist/app.js"
+  },
   "keywords": [
     "Booster",
     "CLI",
