Testing travis if

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,7 @@ jobs:
         - npm run test
         - npm run build
     - stage: npm beta release
-      branches:
-        only:
-        - edge
+      if: branch = edge
       script: npm run build
       deploy:
         provider: npm
@@ -25,9 +23,7 @@ jobs:
         on:
           branch: edge
     - stage: npm release
-      branches:
-        only:
-        - master
+      if: branch = master
       script: npm run build
       deploy:
         provider: npm
