--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.5",
+    "codacy-coverage": "^3.4.0",
     "jest": "^24.7.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.16.0"
