--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
   - npm run lint
   - npm run test
   - npm run build
+  - cat ./coverage/lcov.info | codacy-coverage
 
 jobs:
   include:
