--- a/ressources/tsconfig.json
+++ b/ressources/tsconfig.json
@@ -1,18 +1,13 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "emitDecoratorMetadata": true,
+        "target": "es6",
+        "module": "commonjs",
+        "strict": true,
+        "esModuleInterop": true,
         "experimentalDecorators": true,
-        "strict": false,
-        "outDir": "dist",
-        "sourceMap": true,
+        "emitDecoratorMetadata": true,
     },
     "include": [
         "./src/"
-    ],
-    "exclude": [
-        "./tests",
-        "./src/mocks",
-        "node_modules"
     ]
 }
