--- a/ressources/tsconfig.json
+++ b/ressources/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "emitDecoratorMetadata": true,
+        "target": "es6",
+        "module": "commonjs",
+        "esModuleInterop": true,
         "experimentalDecorators": true,
-        "strict": false,
-        "outDir": "dist",
-        "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "outDir": "./dist"
     },
     "include": [
         "./src/"
