--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "test": "jest -c ./tests/config.js",
-    "test-func": "jest -c ./tests/config.func.js --watchAll",
+    "test-func": "jest -c ./tests/config.func.js",
     "docker-func": "docker run -ti -v $PWD:/home/node/app/:rw node:latest /bin/sh -c 'cd /home/node/app; sh tests/function.sh;'",
     "build": "tsc",
     "lint": "tslint --project ./tsconfig.json -c ./tslint.json",
