--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 image: node:6
 
 before_script:
-  - apt-get install docker
   - npm install
 
 cache:
@@ -20,6 +19,8 @@ test:node:6:
 
 test:node:7:
   image: node:7
+  services:
+  - docker:dind
   script:
     - npm run build
     - npm test
@@ -27,6 +28,8 @@ test:node:7:
 
 test:node:8:
   image: node:8
+  services:
+  - docker:dind
   script:
     - npm run build
     - npm test
@@ -34,6 +37,8 @@ test:node:8:
 
 test:node:10:
   image: node:10
+  services:
+  - docker:dind
   script:
     - npm run build
     - npm test
@@ -41,6 +46,8 @@ test:node:10:
 
 test:node:12:
   image: node:12
+  services:
+  - docker:dind
   script:
     - npm run build
     - npm test
