--- a/package.json
+++ b/package.json
@@ -34,17 +34,28 @@
   },
   "homepage": "https://github.com/booster-ts/booster-cli#readme",
   "devDependencies": {
+    "@types/clui": "^0.3.0",
+    "@types/fs-extra": "^5.0.5",
     "@types/jest": "^24.0.13",
     "@types/node": "^11.13.5",
+    "@types/pascal-case": "^1.1.2",
+    "@types/yeoman-environment": "^2.3.2",
+    "@types/yeoman-generator": "^3.1.4",
     "codacy-coverage": "^3.4.0",
     "jest": "^24.7.1",
+    "pascal-case": "^3.1.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.16.0"
   },
   "dependencies": {
     "@booster-ts/core": "0.0.1",
-    "@types/fs-extra": "^5.0.5",
+    "chalk": "^3.0.0",
+    "clui": "^0.3.6",
     "commander": "^2.20.0",
-    "fs-extra": "^7.0.1"
+    "fs-extra": "^7.0.1",
+    "inquirer": "^7.0.0",
+    "listr": "^0.14.3",
+    "yeoman-environment": "^2.6.0",
+    "yeoman-generator": "^4.2.0"
   }
 }
