--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -16,6 +16,6 @@
     "keywords": [],
     "author": "Booster-TS",
     "booster": {
-
+        "<%= CreatorName %>": "<%= CreatorVersion %>"
     }
 }
