--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,11 @@ install:
 
 script:
   - npm run lint
-  - npm run test-func
+  - npm run test:docker
   - npm run build
 
 jobs:
   include:
-    - stage: Functional Testing
-      node_js: '10'
-      script: npm run docker-func
 
     - stage: npm beta release
       if: branch = master AND type != pull_request
