Improved tests, removed files from bundle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "experimentalDecorators": true,
         "strict": false,
         "outDir": "dist",
-        "sourceMap": true,
+        "sourceMap": false,
         "types": [
             "jest",
             "node"
